--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -206,7 +206,8 @@ jobs:
     executor: basic-executor
     steps:
     - checkout
-    - setup_remote_docker
+    - setup_remote_docker:
+        version: 19.03.13
     - *update_packages
     - run: sudo apt-get install -y git-crypt
     - *decrypt_secrets
